deployment/sparql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparql-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparql-backend
  template:
    metadata:
      labels:
        app: sparql-backend
    spec:
      containers:
        - name: backend
          image: matei10/disyo-sparql:latest
          imagePullPolicy: Always
