deployment/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-backend
spec:
  selector:
    app: api-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
