deployment/sparql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sparql-backend
spec:
  selector:
    app: sparql-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3030
