deployment/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.disyo.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: api-backend
          servicePort: 80
