deployment/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: disyo.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
